# auto-apply-cv-jobs

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
config/: settings.yaml
data/users/kukretirishi91/: settings.yaml
src/: __main__.py  auth.py  config.py  cover_letter.py  cv_manager.py  dashboard.py  db.py  job_apis.py  job_matcher.py  main.py  notifier.py  pdf_generator.py  scheduler.py
src/portals/: __init__.py  base.py  foundit.py  glassdoor.py  indeed.py  linkedin.py  naukri.py  ziprecruiter.py
src/scraper/: adzuna.py
src/utils/: browser.py  rate_limiter.py
tests/: test_config.py  test_db.py  test_job_matcher.py  test_portals.py
